Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10795

wrong skipping of reintegration

XMLWordPrintable

    • 3
    • 9223372036854775807

      There are two problems addressed by this patch:
      1)In qsd_prepare(), if @qqi_acct_failed is true,
      that only means one type of quota failed, Quota
      should continue to handle.
      2)In qsd_config(), only trigger reintegration if
      this type of quota is newly enabled, this could
      fix annoying messages when admin running

      $ lctl conf_param lustre.quota.mdt=ug

      LustreError: 0-0: lustre-MDT0000: can't enable
      quota enforcement since space accounting isn't
      functional. Please run tunefs.lustre --quota on
      an unmounted filesystem if not done already

            wangshilong Wang Shilong (Inactive)
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: